# nature-remo-local

./: .gitignore  pyproject.toml  start-tailscale-serve.sh
src/: api_endpoints.py  main.py  model.py  nature_locak_api_client.py
