[project]
name = "nature-remo-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "pydantic>=2.10.6",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.39",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.2",
]
